--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,9 @@ a.active hr{
   font-weight: 400;
   font-style: normal;
 }
+ ::-webkit-scrollbar{
+  display: none;
+ }
 
 @media (max-width:640){
   a.active{
@@ -24,3 +27,4 @@ a.active hr{
     color: white;
   }
 }
+
